--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "@nextui-org/react": "^2.4.8",
+    "framer-motion": "^11.12.0",
+    "next": "15.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "10.4.15",
+    "daisyui": "^4.12.14",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
