product detail page has been made more modular

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "@supabase/supabase-js": "^2.46.2",
+    "dotenv": "^16.4.7",
     "framer-motion": "^11.12.0",
     "next": "^15.0.3",
     "react": "^18.3.1",
