--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "supabase": "^2.0.0",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
