--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
+    "react-toastify": "^10.0.6",
     "supabase": "^2.0.0",
     "swiper": "^11.1.15"
   },
